--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "yarn run build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
