--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@types/jasmine": "3.3.16",
     "@angular/common": "13.0.3",
     "@angular/router": "13.0.3",
-    "@angular/compiler": "13.0.3",
+    "@angular/compiler": "13.0.4",
     "@types/jasminewd2": "2.0.8",
     "web-animations-js": "2.3.2",
     "@fullcalendar/core": "4.4.0",
@@ -29,7 +29,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "yarn run build",
+    "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
