--- a/package.json
+++ b/package.json
@@ -3,28 +3,26 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "rxjs": "6.6.7",
-    "quill": "1.3.7",
-    "tslib": "2.3.1",
-    "primeng": "13.0.4",
-    "zone.js": "0.11.4",
-    "chart.js": "3.7.0",
-    "primeflex": "2.0.0",
-    "primeicons": "5.0.0",
-    "@types/node": "8.9.5",
-    "@angular/cdk": "13.0.4",
-    "@angular/core": "13.0.3",
-    "@angular/forms": "13.0.3",
-    "@types/jasmine": "3.3.16",
-    "@angular/common": "13.0.3",
-    "@angular/router": "13.0.3",
-    "@angular/compiler": "13.0.3",
-    "@types/jasminewd2": "2.0.8",
-    "web-animations-js": "2.3.2",
-    "@fullcalendar/core": "4.4.0",
-    "@angular/animations": "13.0.3",
-    "@angular/platform-browser": "13.0.3",
-    "@angular/platform-browser-dynamic": "13.0.3"
+    "rxjs": "^7.4.0",
+    "quill": "^1.3.7",
+    "tslib": "^2.3.1",
+    "primeng": "^13.0.4",
+    "zone.js": "^0.11.4",
+    "chart.js": "^3.7.0",
+    "primeflex": "^2.0.0",
+    "primeicons": "^5.0.0",
+    "@types/node": "12.20.36",
+    "@angular/cdk": "^13.0.4",
+    "@angular/core": "^13.0.3",
+    "@angular/forms": "^13.0.3",
+    "@angular/common": "^13.0.3",
+    "@angular/router": "^13.0.3",
+    "@angular/compiler": "^13.0.3",
+    "@angular/animations": "^13.0.3",
+    "@angular/platform-browser": "^13.0.3",
+    "@angular/platform-browser-dynamic": "^13.0.3",
+    "web-animations-js": "^2.3.2",
+    "@fullcalendar/core": "^4.4.0"
   },
   "scripts": {
     "ng": "ng",
@@ -35,22 +33,22 @@
     "e2e": "ng e2e"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1100.4",
-    "@angular/cli": "~11.0.4",
-    "@angular/compiler-cli": "~11.0.4",
-    "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.1.0",
+    "@angular-devkit/build-angular": "~13.0.3",
+    "@angular/cli": "~13.0.3",
+    "@angular/compiler-cli": "^13.0.3",
+    "@types/jasmine": "~3.8.0",
+    "@types/node": "^12.20.36",
+    "codelyzer": "^6.0.1",
+    "jasmine-core": "~3.8.0",
+    "jasmine-spec-reporter": "~7.0.0",
+    "karma": "~6.3.2",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
+    "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine-html-reporter": "^1.7.0",
     "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
+    "ts-node": "~10.4.0",
+    "tslint": "~6.1.3",
+    "typescript": "~4.5.4"
   }
 }
