--- a/package.json
+++ b/package.json
@@ -3,15 +3,14 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "rxjs": "^7.4.0",
+    "rxjs": "^6.6.7",
     "quill": "^1.3.7",
-    "tslib": "^2.3.1",
     "primeng": "^13.0.4",
-    "zone.js": "^0.11.4",
+    "zone.js": "~0.11.4",
     "chart.js": "^3.7.0",
     "primeflex": "^2.0.0",
     "primeicons": "^5.0.0",
-    "@types/node": "12.20.36",
+    "@types/node": "12.11.1",
     "@angular/cdk": "^13.0.4",
     "@angular/core": "^13.0.3",
     "@angular/forms": "^13.0.3",
@@ -33,22 +32,21 @@
     "e2e": "ng e2e"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.0.3",
-    "@angular/cli": "~13.0.3",
+    "@angular-devkit/build-angular": "^13.0.3",
+    "@angular/cli": "^13.0.3",
     "@angular/compiler-cli": "^13.0.3",
-    "@types/jasmine": "~3.8.0",
-    "@types/node": "^12.20.36",
-    "codelyzer": "^6.0.1",
-    "jasmine-core": "~3.8.0",
+    "@types/jasmine": "~3.10.0",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^6.0.0",
+    "jasmine-core": "~3.10.0",
     "jasmine-spec-reporter": "~7.0.0",
-    "karma": "~6.3.2",
+    "karma": "~6.3.4",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.7.0",
     "protractor": "~7.0.0",
     "ts-node": "~10.4.0",
     "tslint": "~6.1.3",
-    "typescript": "~4.5.4"
+    "typescript": "^4.4.2"
   }
 }
